kubernetes/apps/observability/kube-prometheus-stack/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager
  annotations:
    gatus.home-operations.com/enabled: "true"
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
  hostnames:
    - alertmanager.petrovic.network
  rules:
    - backendRefs:
        - name: alertmanager-operated
          port: 9093
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  annotations:
    gatus.home-operations.com/enabled: "true"
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
  hostnames:
    - prometheus.petrovic.network
  rules:
    - backendRefs:
        - name: prometheus-operated
          port: 9090
